--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
 	"dependencies": {
 		"nodeunit": "0.9.x"
 		,"express": "4.14.x"
+		,"argparse": "1.0.x"
+		,"fd-http-request": "1.1.x"
+		,"apart": "1.0.x"
+		,"jsdom": "9.3.x"
 	}
 }
