--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"nodeunit": "0.9.x"
 		,"express": "4.14.x"
+		,"ejs": "2.4.x"
 		,"argparse": "1.0.x"
 		,"fd-http-request": "1.1.x"
 		,"apart": "1.0.x"
